--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	</head>
 	<body>
     <p style="font-size:100px">Hola Mundo</p>
-    <script src="database/initialization.js"></script>
+    <script type="module" src="database/initialization.js"></script>
 	</body>
 </html>
