--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-	<p style="font-size:100px">Hola Mundo 2</p>
+	<p style="font-size:100px">Hola Mundo</p>
 
 	<div id="app">
 		<form id="error-form" class="hidden">
@@ -57,7 +57,7 @@
 
 	</div>
 	
-	<script type="module" src="database/initialization.js"></script>
+	<!-- <script type="module" src="database/initialization.js"></script> -->
 </body>
 
 </html>
