--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 		</form>
 	</div>
 	
-	<script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-firestore.js"></script>
+	<script type="module" src="https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js"></script>
+	<script type="module" src="https://www.gstatic.com/firebasejs/9.18.0/firebase-firestore.js"></script>
 	<script src="database/app.js" type="module"></script>
 	<!-- <script type="module" src="database/initialization.js"></script> -->
 </body>
